--- a/project/index.html
+++ b/project/index.html
@@ -12,7 +12,6 @@
 	<script src="./library/leaflet-providers-added-onemap.js"></script>
 	<script src="./library/Polyline.encoded.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
 </head>
 
 <body>
@@ -22,7 +21,7 @@
 		</li>
 		<div class="checkbox" id="switch">
 			<div class="inner" id="switch-inner" onclick="toggleSwitch()">
-				<div class = "switch"></div>
+				<div class="switch"></div>
 			</div>
 		</div>
 		<ul class="main-feature" id="main-feature">
@@ -37,10 +36,12 @@
 				<div>
 					<i class="ri-send-plane-line hidden"></i>
 					<span class="hidden">Enter starting point:</span>
-					<input class="input-style hidden" type="text" id="starting-point" placeholder="coordinate or place name" required><br>
+					<input class="input-style hidden" type="text" id="starting-point"
+						placeholder="coordinate or place name" required><br>
 					<i class="ri-send-plane-line hidden"></i>
 					<span class="hidden">Enter destination:</span>
-					<input class="input-style hidden" type="text" id="destination" placeholder="coordinate or place name" required><br>
+					<input class="input-style hidden" type="text" id="destination"
+						placeholder="coordinate or place name" required><br>
 				</div>
 				<button class="button-style hidden" type="submit" onclick="submit()">Searching</button>
 			</li>
@@ -63,6 +64,7 @@
 			</li>
 			<li class="sub-menu-location" id="location-expanded">
 				<!-- Add Current Location Submenu Content Here -->
+
 			</li>
 		</ul>
 	</div>
@@ -120,7 +122,7 @@
 			const mapContainer = document.getElementById('mapdiv');
 			mapContainer.classList.toggle('expanded');
 
-			const sideBar= document.getElementById('sidebar');
+			const sideBar = document.getElementById('sidebar');
 			//isExpanded = Array.from(sideBar.classList).includes('expanded');
 
 			sideBar.classList.toggle('expanded');
@@ -132,7 +134,7 @@
 			for (let i = 0; i < menuText.length; i++) {
 				menuText[i].classList.toggle('expanded');
 			}
-			
+
 			const switchContainer = document.getElementById('switch');
 			switchContainer.classList.toggle('expanded');
 
@@ -203,6 +205,15 @@
 			}
 		}
 
+		// submit时要调用currentline
+		let currentPolyline = null;
+		let currentstartmarker = null;
+		let currentendmarker = null;
+		let start_latitudeArray = [];
+		let start_longitudeArray = [];
+		let end_latitudeArray = [];
+		let end_longitudeArray = [];
+
 		function submit() {
 			const startingPointInput = document.getElementById('starting-point');
 			const destinationInput = document.getElementById('destination');
@@ -218,35 +229,51 @@
 			// const destinationCoords = destination.split(',');
 			// var location = "Singapore";
 
-            // 调用API的端点URL
-            var apiUrl = "https://developers.onemap.sg/";
+			// 调用API的端点URL
+			var apiUrl = "https://developers.onemap.sg/";
 
-            // 构建API请求URL
-            var requestUrl_1 = apiUrl + "commonapi/search?searchVal=" + location_1 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
+			// 构建API请求URL
+			var requestUrl_1 = apiUrl + "commonapi/search?searchVal=" + location_1 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
 
-            // 发送GET请求
-            $.get(requestUrl_1, function (data) {
-                console.log(data);
-                // 提取LATITUDE和LONGITUDE信息
-                window.startingPointLatitude = data.results[0].LATITUDE;
-                window.startingPointLongitude = data.results[0].LONGITUDE;
+			// 发送GET请求
+			$.get(requestUrl_1, function (data) {
+				console.log(data);
+				// 储存LATITUDE信息到数组
+				for (var i = 0; i < data.results.length; i++) {
+					start_latitudeArray.push(data.results[i].LATITUDE);
+				}
+				// 储存LONGITUDE信息到数组
+				for (var i = 0; i < data.results.length; i++) {
+					start_longitudeArray.push(data.results[i].LONGITUDE);
+				}
 
-                // var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
-                // $("#result").html(resultText);
-                
-            });
+				// 提取LATITUDE和LONGITUDE信息
+				window.startingPointLatitude = data.results[0].LATITUDE;
+				window.startingPointLongitude = data.results[0].LONGITUDE;
 
-            var requestUrl_2 = apiUrl + "commonapi/search?searchVal=" + location_2 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
+				// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
+				// $("#result").html(resultText);
+
+			});
+
+			var requestUrl_2 = apiUrl + "commonapi/search?searchVal=" + location_2 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
 			$.get(requestUrl_2, function (data) {
-                console.log(data);
-                // 提取LATITUDE和LONGITUDE信息
-                window.destinationLatitude = data.results[0].LATITUDE;
-                window.destinationLongitude = data.results[0].LONGITUDE;
+				console.log(data);
+				// 提取LATITUDE和LONGITUDE信息
+				window.destinationLatitude = data.results[0].LATITUDE;
+				window.destinationLongitude = data.results[0].LONGITUDE;
 
-                // var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
-                // $("#result").html(resultText);
-                
-            });
+				// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
+				// $("#result").html(resultText);
+
+				for (var i = 0; i < data.results.length; i++) {
+					end_longitudeArray.push(data.results[i].LONGITUDE);
+				}
+				for (var i = 0; i < data.results.length; i++) {
+					end_latitudeArray.push(data.results[i].LATITUDE);
+				}
+
+			});
 
 			// window.startingPointLatitude = parseFloat(startingPointCoords[0]);
 			// window.startingPointLongitude = parseFloat(startingPointCoords[1]);
@@ -306,8 +333,8 @@
 				var center = L.bounds([startlat, startlat], [endlat, endlat]).getCenter();
 
 				//图标生成与颜色设置   
-				var goldIcon = new L.Icon({
-					iconUrl: './images/marker-icon-gold.png',
+				var violetIcon = new L.Icon({
+					iconUrl: './images/marker-icon-violet.png',
 					shadowUrl: './images/marker-shadow.png',
 					iconSize: [25, 41],
 					iconAnchor: [12, 41],
@@ -324,33 +351,92 @@
 					shadowSize: [41, 41]
 				});
 
+				if (currentstartmarker) {
+					map.removeLayer(currentstartmarker);
+				}
+				if (currentendmarker) {
+					map.removeLayer(currentendmarker)
+				}
+
 				var startmarker = L.marker([startlat, startlng], { icon: blackIcon }).addTo(map);
-				var endmarker = L.marker([endlat, endlng], { icon: goldIcon }).addTo(map);
+				var endmarker = L.marker([endlat, endlng], { icon: violetIcon }).addTo(map);
 				console.log("ready pointing!");
-				// startmarker.bindPopup(`Car Number: 5`);
-				// var startmarker = L.marker([1.30011, 103.8422],{ icon: greenIcon }).addTo(map);
 
-				// var asdf = L.marker([1.30011, 103.8422]).addTo(map);
+				// 更新当前的点
+				currentstartmarker = startmarker;
+				currentendmarker = endmarker;
 
-
-				//得到route（未编译）
-				var geometryOfRoute = sampleRoute.route_geometry;
-
-				//解码
-				var polyline = L.polyline(L.PolylineUtil.decode(geometryOfRoute, 5), {
+				// 检查地图上是否已存在折线，并在存在时将其移除
+				// if (currentPolyline) {
+				// 	map.removeLayer(currentPolyline);
+				// }
+				var sum_geometryOfRoute = sampleRoute.route_geometry;
+				var decodePoly = L.PolylineUtil.decode(sum_geometryOfRoute, 5);
+				console.log(decodePoly);
+				var sum_polyline = L.polyline(decodePoly, {
 					color: "purple",
 					weight: 5,
 					smoothFactor: 1
 				});
 
+				var colors = ["green", "yellow", "red"]; // 定义不同分段的颜色
+
+				// for (var i = 0; i < sampleRoute.route_instructions.length - 1; i++) {
+				// 	var instruction_1 = sampleRoute.route_instructions[i];
+				// 	var instruction_2 = sampleRoute.route_instructions[i + 1];
+				// 	var PointOfRoute_1 = instruction_1[3]; // 经纬度坐标点所在索引为3
+				// 	var PointOfRoute_2 = instruction_2[3];
+				// 	// console.log(PointOfRoute);
+				// 	// 需要转换为与decodeploy一样的格式
+				// 	var coordinatesArray_1 = PointOfRoute_1.split(',').map(parseFloat);
+				// 	var coordinatesArray_2 = PointOfRoute_2.split(',').map(parseFloat);
+				// 	var arrayOfArrays = [];
+				// 	arrayOfArrays.push(coordinatesArray_1);
+				// 	arrayOfArrays.push(coordinatesArray_2);
+				// 	console.log(arrayOfArrays);
+				// 	// 绘制当前分段的折线，并使用不同颜色
+				// 	var colorIndex = i % colors.length; // 根据索引选择颜色
+				// 	var polyline = L.polyline(arrayOfArrays, {
+				// 		color: colors[colorIndex],
+				// 		weight: 5,
+				// 		smoothFactor: 1
+				// 	});
+
+				// 	// 加入地图
+				// 	polyline.addTo(map);
+				// }
+
+				for (var i = 0; i < decodePoly.length - 1; i++) {
+					var instruction_1 = decodePoly[i];
+					var instruction_2 = decodePoly[i + 1];
+
+					console.log(instruction_1);
+					// 需要转换为与decodeploy一样的格式
+					var arrayOfArrays = [];
+					arrayOfArrays.push(instruction_1);
+					arrayOfArrays.push(instruction_2);
+					console.log(arrayOfArrays);
+					// 绘制当前分段的折线，并使用不同颜色
+					var colorIndex = i % colors.length; // 根据索引选择颜色
+					var polyline = L.polyline(arrayOfArrays, {
+						color: colors[colorIndex],
+						weight: 5,
+						smoothFactor: 1
+					});
+					// 加入地图
+					polyline.addTo(map);
+				}
+
 				//边界
-				var bounds = polyline.getBounds();
+				// sum_polyline.addTo(map);
+				var bounds = sum_polyline.getBounds();
 
-				//加入线条
-				polyline.addTo(map);
-
+				// 更新currentployline，以免多条线一起出现在地图上
+				// currentPolyline = polyline;
 				//缩放到边界
 				map.fitBounds(bounds);
+
+
 			}
 		}
 		function showData() {
