--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 						currentPolyline.push(polyline);
 						// 加入地图
 						polyline.addTo(map);
-						console("no green");
+						console.log("no green");
 
 					}
 					else if (min_camera_end > -1 && min_camera_start == -1) {
