--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 		let camera_longitudeArray = [];
 		let camera_car_number = [];
 
-		let maxarea = 0.001;
+		let maxarea = 0.000065;
 
 		function submit() {
 			const startingPointInput = document.getElementById('starting-point');
@@ -388,7 +388,7 @@
 
 				var sum_geometryOfRoute = sampleRoute.route_geometry;
 				var decodePoly = L.PolylineUtil.decode(sum_geometryOfRoute, 5);
-				console.log(decodePoly);
+				// console.log(decodePoly);
 				var sum_polyline = L.polyline(decodePoly, {
 					color: "purple",
 					weight: 5,
@@ -398,9 +398,12 @@
 				// var colors = ["green", "yellow", "red"]; // 定义不同分段的颜色
 
 				// 检查地图上是否已存在折线，并在存在时将其移除
-
+				console.log(currentPolyline);
 				while (currentPolyline.length > 0) {
-					map.remove(currentPolyline[currentPolyline.length - 1]);
+					var num = currentPolyline.length;
+					Tempt_currentPolyline = urrentPolyline[num - 1];
+					console.log(Tempt_currentPolyline);
+					map.remove(Tempt_currentPolyline);
 					currentPolyline.pop();
 				}
 				if (currentPolyline.length === 0) {
